# platformxe-python

./: README.md  pyproject.toml
platformxe/: __init__.py  client.py  exceptions.py  types.py
platformxe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
platformxe/services/: async_services.py  documents.py  domains.py  events.py  exports.py  identity.py  messaging.py  misc.py  ocr.py  pdf.py  permissions.py  qr.py  storage.py  subscriptions.py  templates.py  threads.py  usage.py  webhooks.py  workflows.py
tests/: test_client.py
