[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platformxe"
version = "1.0.0"
description = "Python SDK for the PlatformXe API"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [{name = "Caldera Technologies Ltd.", email = "hello@calderasuite.com"}]
keywords = ["platformxe", "api", "sdk", "authorization", "messaging", "identity", "nigeria"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["platformxe*"]

[tool.setuptools.package-data]
platformxe = ["py.typed"]
